fix weird sizing bug with long url

--- a/src/pages/articles/typescript-proposal.mdx
+++ b/src/pages/articles/typescript-proposal.mdx
@@ -125,7 +125,7 @@ With typescript the IDE flags this as an error and gives a helpful message:
 
 Now if you go to consume this component you will get useful autocomplete and errors if the props do not match the typing that we've set up.
 
-https://user-images.githubusercontent.com/121046841/211636315-0510ad29-96ea-4364-b396-797ffa09ab47.mp4
+[Demo](https://user-images.githubusercontent.com/121046841/211636315-0510ad29-96ea-4364-b396-797ffa09ab47.mp4)
 
 ## Conclusion
 
