--- a/src/pages/articles/placeholder-with-extras/index.mdx
+++ b/src/pages/articles/placeholder-with-extras/index.mdx
@@ -1,15 +1,15 @@
-import { ArticleLayout } from '@/components/ArticleLayout'
-import Image from 'next/image'
-import ifIHadOneGIF from './if-i-had-one.gif'
+import { ArticleLayout } from '@/components/ArticleLayout';
+import Image from 'next/image';
+import ifIHadOneGIF from './if-i-had-one.gif';
 
 export const meta = {
   author: 'Eric Ladage',
   date: '2022-12-31',
   title: 'Placeholder Article with IMAGES',
   description: 'Lorem ipsum whatever man',
-}
+};
 
-export default (props) => <ArticleLayout meta={meta} {...props} />
+export default (props) => <ArticleLayout meta={meta} {...props} />;
 
 This is where some cool article with like images and whatever would be...
 
